Fait quelques correctifs sur la structure

--- a/pages/abonnement.html
+++ b/pages/abonnement.html
@@ -3,8 +3,7 @@ title: S’abonner au carnet
 ---
 
 <p>
-    Afin de suivre les publications du carnet, vous pouvez ajouter l’adresse
-    suivante à votre agrégateur de flux <abbr>RSS</abbr> favori :
+    Afin de suivre les publications du carnet, vous pouvez ajouter l’adresse suivante à votre agrégateur de flux <abbr>RSS</abbr> favori :
 </p>
 
 <pre>
@@ -12,8 +11,5 @@ title: S’abonner au carnet
 </pre>
 
 <p>
-    Vous n’utilisez pas encore d’agrégateur ? <strong>Pourquoi ne pas commencer par
-    <a href="https://flus.io">vous créer un compte sur Flus</a> ?</strong>
-    (le premier
-    mois est offert)
+    Vous n’utilisez pas encore d’agrégateur ? <strong>Pourquoi ne pas commencer par <a href="https://flus.io">vous créer un compte sur Flus</a> ?</strong> (en vérité il vous faudra encore attendre un peu, le service n’est pas encore ouvert)
 </p>
