--- a/pages/abonnement.html
+++ b/pages/abonnement.html
@@ -1,5 +1,6 @@
 ---
 title: S’abonner au carnet
+description: Afin de suivre les publications du carnet, vous pouvez ajouter l’adresse suivante à votre agrégateur de flux RSS favori.
 ---
 
 <p>
