Enlève la mention du service fermé sur la page abonnement

--- a/pages/abonnement.html
+++ b/pages/abonnement.html
@@ -12,5 +12,5 @@ description: Afin de suivre les publications du carnet, vous pouvez ajouter l’
 </pre>
 
 <p>
-    Vous n’utilisez pas encore d’agrégateur ? <strong>Pourquoi ne pas commencer par <a href="https://flus.io">vous créer un compte sur Flus</a> ?</strong> (en vérité il vous faudra encore attendre un peu, le service n’est pas encore ouvert)
+    Vous n’utilisez pas encore d’agrégateur ? <strong>Pourquoi ne pas commencer par <a href="https://flus.io">vous créer un compte sur Flus</a> ?</strong>
 </p>
