Refond le style du carnet

--- a/pages/abonnement.html
+++ b/pages/abonnement.html
@@ -1,6 +1,7 @@
 ---
 title: S’abonner au carnet
 description: Afin de suivre les publications du carnet, vous pouvez ajouter l’adresse suivante à votre agrégateur de flux RSS favori.
+illustration: illustrations/news.svg
 ---
 
 <p>
@@ -14,3 +15,10 @@ description: Afin de suivre les publications du carnet, vous pouvez ajouter l’
 <p>
     Vous n’utilisez pas encore d’agrégateur ? <strong>Pourquoi ne pas commencer par <a href="https://flus.io">vous créer un compte sur Flus</a> ?</strong>
 </p>
+
+<img
+    class="illustration illustration--centered news"
+    alt=""
+    src="illustrations/news.svg"
+    height="300"
+/>
