Corrige quelques liens

--- a/pages/abonnement.html
+++ b/pages/abonnement.html
@@ -9,11 +9,11 @@ illustration: illustrations/news.svg
 </p>
 
 <pre>
-<code>https://flus.io/carnet/feeds/all.atom.xml</code>
+<code>https://flus.fr/carnet/feeds/all.atom.xml</code>
 </pre>
 
 <p>
-    Vous n’utilisez pas encore d’agrégateur ? <strong>Pourquoi ne pas commencer par <a href="https://flus.io">vous créer un compte sur Flus</a> ?</strong>
+    Vous n’utilisez pas encore d’agrégateur ? <strong>Pourquoi ne pas commencer par <a href="https://flus.io">vous créer un compte sur flus.io</a> ?</strong>
 </p>
 
 <img
