Propose d’utiliser Flus sur la page abonnement

--- a/pages/abonnement.html
+++ b/pages/abonnement.html
@@ -13,7 +13,8 @@ illustration: illustrations/news.svg
 </pre>
 
 <p>
-    Vous n’utilisez pas encore d’agrégateur ? <strong>Pourquoi ne pas commencer par <a href="https://flus.io">vous créer un compte sur flus.io</a> ?</strong>
+    Vous n’utilisez pas encore d’agrégateur ?
+    <strong>Pourquoi ne pas <a href="https://app.flus.fr/collections/1697725479256195983">suivre le carnet directement sur Flus</a> ?</strong>
 </p>
 
 <img
