Met à jour la structure du blog

--- a/pages/abonnement.html
+++ b/pages/abonnement.html
@@ -1,5 +1,5 @@
 ---
-title: S’abonner au carnet
+title: Suivre le carnet
 description: Afin de suivre les publications du carnet, vous pouvez ajouter l’adresse suivante à votre agrégateur de flux RSS favori.
 illustration: illustrations/news.svg
 ---
