Change la formulation pour les titres Markdown

--- a/pages/markdown.html
+++ b/pages/markdown.html
@@ -50,13 +50,13 @@ description: Un guide simple pour apprendre Markdown.
 
 <p>
     Les titres se font en commençant une ligne par un <code>#</code>. Ajoutez
-    jusqu’à 6 <code>#</code> pour faire des titres plus petits (on parle aussi
-    de niveau de titre) :
+    jusqu’à 6 <code>#</code> pour faire des titres moins importants (on parle
+    aussi de niveau de titre) :
 </p>
 
 <pre><code># Un grand titre
-## Un titre un peu moins grand
-### Un titre encore moins grand</code></pre>
+## Un titre un peu moins important
+### Un titre encore moins important</code></pre>
 
 <p>
     Vous pouvez également souligner le texte en utilisant <code>===</code> ou
