Améliore des éléments du guide Markdown

--- a/pages/markdown.html
+++ b/pages/markdown.html
@@ -54,7 +54,7 @@ description: Un guide simple pour apprendre Markdown.
     aussi de niveau de titre) :
 </p>
 
-<pre><code># Un grand titre
+<pre><code># Le titre principal
 ## Un titre un peu moins important
 ### Un titre encore moins important</code></pre>
 
@@ -63,8 +63,8 @@ description: Un guide simple pour apprendre Markdown.
     <code>---</code> pour créer des titres.
 </p>
 
-<pre><code>Un grand titre
-=============</code></pre>
+<pre><code>Le titre principal
+==================</code></pre>
 
 <h2 id="paragraphes">Paragraphes</h2>
 
@@ -154,13 +154,15 @@ description: Un guide simple pour apprendre Markdown.
     précédé d’un <code>!</code> :
 </p>
 
-<pre><code>![Le logo de Flus](https://flus.fr/static/logo.svg)</code></pre>
+<pre><code>![Le logo de Flus](https://flus.fr/static/og-card.png)</code></pre>
 
 <p>
     donne :
 </p>
 
-<img src="https://flus.fr/static/logo.svg" alt="Le logo de Flus" />
+<p class="paragraph--center">
+    <img src="https://flus.fr/static/og-card.png" alt="Le logo de Flus" />
+</p>
 
 <p>
     Il est important de préciser un texte alternatif pour décrire les images :
@@ -277,4 +279,10 @@ bloc de code
 <p>
     Merci à Framasoft pour <a href="https://docs.framasoft.org/fr/grav/markdown.html#">sa
        documentation</a> sur laquelle je me suis largement reposé.
+</p>
+
+<h2 id="licence">Licence</h2>
+
+<p>
+    Ce guide est publié sous licence <a href="https://creativecommons.org/licenses/by-sa/4.0/deed.fr">Creative Commons By-SA 4.0.</a>
 </p>
