Ajoute des nuances dans le guide Markdown

--- a/pages/markdown.html
+++ b/pages/markdown.html
@@ -4,8 +4,8 @@ description: Un guide simple pour apprendre Markdown.
 ---
 
 <p>
-    Markdown est une manière d’écrire du texte pour le Web. C’est un format
-    texte relativement simple et intuitif.
+    Markdown est une manière d’écrire du texte pour le Web (mais pas que !)
+    C’est un format texte relativement simple et intuitif à prendre en main.
 </p>
 
 <p>
@@ -165,9 +165,9 @@ description: Un guide simple pour apprendre Markdown.
 </p>
 
 <p>
-    Il est important de préciser un texte alternatif pour décrire les images :
-    c’est souvent tout ce que voient les personnes utilisant un lecteur
-    d’écran !
+    Il est important de préciser un texte alternatif pour décrire les images
+    porteuses de sens : c’est souvent tout ce que voient les personnes
+    utilisant un lecteur d’écran !
 </p>
 
 <h2 id="citations">Citations</h2>
