[markdown] Ajout d'un avertissement concernant l'espace après le # pour les titres

--- a/pages/markdown.html
+++ b/pages/markdown.html
@@ -58,6 +58,9 @@ description: Un guide simple pour apprendre Markdown.
 ## Un titre un peu moins important
 ### Un titre encore moins important</code></pre>
 
+⚠️  Attention, une erreur commune est d’oublier l’espace après le
+<code>#</code>. Il faut bien le mettre pour que le titre soit un titre !
+
 <p>
     Vous pouvez également souligner le texte en utilisant <code>===</code> ou
     <code>---</code> pour créer des titres.
