Améliore légèrement la page Markdown

--- a/pages/markdown.html
+++ b/pages/markdown.html
@@ -4,8 +4,8 @@ description: Un guide simple pour apprendre Markdown.
 ---
 
 <p>
-    Markdown est une manière d’écrire du texte pour le Web (mais pas que !)
-    C’est un format texte relativement simple et intuitif à prendre en main.
+    Markdown est une manière d’écrire du texte pour le Web.
+    C’est un format texte relativement simple à prendre en main.
 </p>
 
 <p>
@@ -19,7 +19,7 @@ description: Un guide simple pour apprendre Markdown.
 <ol>
     <li><a href="#style-du-texte">Style du texte</a></li>
     <li><a href="#titres">Titres</a></li>
-    <li><a href="#paragraphes">Paragraphes</a></li>
+    <li><a href="#paragraphes">Paragraphes et retours à la ligne</a></li>
     <li><a href="#listes">Listes</a></li>
     <li><a href="#liens">Liens</a></li>
     <li><a href="#images">Images</a></li>
@@ -69,7 +69,7 @@ description: Un guide simple pour apprendre Markdown.
 <pre><code>Le titre principal
 ==================</code></pre>
 
-<h2 id="paragraphes">Paragraphes</h2>
+<h2 id="paragraphes">Paragraphes et retours à la ligne</h2>
 
 <p>
     Les paragraphes se forment naturellement dès que vous séparez deux lignes
@@ -86,13 +86,8 @@ description: Un guide simple pour apprendre Markdown.
 <h2 id="listes">Listes</h2>
 
 <p>
-    Vous pouvez créer des listes en commençant une ligne avec les caractères
-    <code>-</code> ou <code>*</code> pour des listes non ordonnées, ou avec des
-    nombres pour des listes ordonnées.
-</p>
-
-<p>
-    Une liste non ordonnée :
+    Vous pouvez créer des listes (non ordonnées) en commençant une ligne avec
+    les caractères <code>-</code> ou <code>*</code> :
 </p>
 
 <pre><code>- un élément
@@ -117,7 +112,8 @@ description: Un guide simple pour apprendre Markdown.
 </ul>
 
 <p>
-    Une liste ordonnée :
+    Faites commencer la ligne par un nombre et un point pour créer une liste
+    ordonnée :
 </p>
 
 <pre><code>1. élément un
@@ -133,18 +129,18 @@ description: Un guide simple pour apprendre Markdown.
 <h2 id="liens">Liens</h2>
 
 <p>
-    Créez un lien en mettant le texte désiré entre crochets et le lien associé
-    entre parenthèses.
+    Créez un lien en mettant le texte cliquable entre crochets et le lien
+    associé entre parenthèses.
 </p>
 
 <p>
-    <code>Apprenez Markdown avec [ce guide](https://flus.fr/)</code>.
+    <code>Apprenez Markdown avec [le Guide Markdown](https://flus.fr/markdown)</code>.
 </p>
 
 <p>s’affiche :</p>
 
 <p>
-    Apprenez Markdown avec <a href="https://flus.fr/">ce guide</a>.
+    Apprenez Markdown avec <a href="https://flus.fr/markdown">le Guide Markdown</a>.
 </p>
 
 <h2 id="images">Images</h2>
@@ -232,6 +228,14 @@ description: Un guide simple pour apprendre Markdown.
         </tr>
     </tbody>
 </table>
+
+<p>
+    On ne va pas se mentir : créer des tableaux en Markdown n’est pas très
+    pratique ! Il existe des outils en ligne pour faciliter ça, comme
+    <a href="https://www.tablesgenerator.com/markdown_tables">
+        <i lang="en">Markdown Table Generator</i>
+    </a> (en anglais).
+</p>
 
 <h2 id="code">Code</h2>
 
