Adapte le design du blog à celui du site

--- a/pages/abonnement.html
+++ b/pages/abonnement.html
@@ -1,25 +1,40 @@
 ---
-title: Suivre le carnet
-description: Afin de suivre les publications du carnet, vous pouvez ajouter l’adresse suivante à votre agrégateur de flux RSS favori.
-illustration: illustrations/news.svg
+title: Suivre le carnet de Flus
+description: Vous utilisez Flus et vous souhaitez ne rien rater des publications du carnet ?
 ---
 
-<p>
-    Afin de suivre les publications du carnet, vous pouvez ajouter l’adresse suivante à votre agrégateur de flux <abbr>RSS</abbr> favori :
-</p>
+<div class="panel">
+    <div class="wrapper wrapper--text wrapper--center flow flow--larger text--center">
+        <div class="flow">
+            <p>
+                <strong>Vous utilisez Flus et vous souhaitez ne rien rater des publications du carnet&nbsp;?</strong>
+            </p>
 
-<pre>
-<code>https://flus.fr/carnet/feeds/all.atom.xml</code>
-</pre>
+            <p>
+                <a class="button button--primary" href="https://app.flus.fr/collections/1697725479256195983">
+                    <svg class="icon icon--feed" aria-hidden="true" width="36" height="36">
+                        <use xlink:href="/static/icons/icons.svg#feed"/>
+                    </svg>
 
-<p>
-    Vous n’utilisez pas encore d’agrégateur ?
-    <strong>Pourquoi ne pas <a href="https://app.flus.fr/collections/1697725479256195983">suivre le carnet directement sur Flus</a> ?</strong>
-</p>
+                    Suivre le blog
+                </a>
+            </p>
+        </div>
 
-<img
-    class="illustration illustration--centered news"
-    alt=""
-    src="illustrations/news.svg"
-    height="300"
-/>
+        <div class="flow">
+            <p>
+                Sinon, vous pouvez ajouter l’adresse suivante à votre lecteur de flux favori&nbsp;:
+            </p>
+
+            <pre><code>https://flus.fr/carnet/feeds/all.atom.xml</code></pre>
+        </div>
+
+        <div>
+            <img
+                class="illustration"
+                alt=""
+                src="illustrations/happy_news.svg"
+            />
+        </div>
+    </div>
+</div>
